styled login screen

--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,2 @@
 PORT = 2121
-DB_STRING = mongodb+srv://demo:demo@cluster0.hcds1.mongodb.net/todos?retryWrites=true&w=majority
+DB_STRING = mongodb+srv://roberto:WciShk8X0iRXVc0w@cluster0.5lmdays.mongodb.net/?retryWrites=true&w=majority
