--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,2 @@
-PORT = 2121
-DB_STRING = mongodb+srv://demo:demo@cluster0.hcds1.mongodb.net/todos?retryWrites=true&w=majority
+PORT = 3000
+DB_STRING = mongodb+srv://flav:flavnow@cluster0.jju88.mongodb.net/?retryWrites=true&w=majority
